# VocalGlass

./: .gitignore  ASSET-BOARD.md  HANDOFF-SHOPIFY.md  HANDOFF-WINDOWS.md  PLUGIN-FIXES.md
.cursor/rules/: photoreal-vst-skin-pipeline.mdc
Vocal2A/: CMakeLists.txt
Vocal2A/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Vocal2A/Source/dsp/: OptoLeveler.h
Vocal2A/Source/licensing/: LicenseGate.h
Vocal2A/Source/ui/: KnobLookAndFeel.h  ToggleSwitch.h  VUMeter.h  VintageKnob.h
VocalAir/: CMakeLists.txt
VocalAir/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
VocalAir/Source/dsp/: AirEnhancer.h
VocalAir/Source/ui/: AirKnob.h  ArcMeter.h  IconButton.h  Icons.h  KnobLookAndFeel.h
VocalBlend/: CMakeLists.txt
VocalBlend/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
VocalBlend/Source/dsp/: BlendEngine.h
VocalBlend/Source/ui/: KnobLookAndFeel.h
VocalChop/: CMakeLists.txt
VocalChop/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
VocalChop/Source/dsp/: ChopEngine.h
VocalChop/Source/ui/: ChopDisplay.h
VocalClip/: CMakeLists.txt
VocalClip/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
VocalClip/Source/dsp/: ClipEngine.h
VocalClip/Source/ui/: ClipDisplay.h  LabeledKnob.h
VocalComp/: CMakeLists.txt
VocalComp/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
VocalComp/Source/dsp/: Compressor.h
VocalComp/Source/ui/: CurveDisplay.h  KnobLookAndFeel.h  MeterBar.h  Theme.h
VocalDelay/: CMakeLists.txt
VocalDelay/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
VocalDelay/Source/dsp/: DelayEngine.h
VocalDelay/Source/licensing/: LicenseConfig.h  LicenseManager.h
VocalDelay/Source/ui/: DisplayCard.h  KnobLookAndFeel.h  LabeledKnob.h  LinkButton.h  Meter.h  TapButton.h
VocalDoubler/: CMakeLists.txt
VocalDoubler/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
VocalDoubler/Source/dsp/: Doubler.h
VocalDoubler/Source/licensing/: LicenseConfig.h
VocalDoubler/Source/ui/: DoubleDisplay.h  EffectOnlyButton.h  KnobLookAndFeel.h  ModRateControl.h  TopBarButton.h  ValueReadout.h
VocalEss/: CMakeLists.txt
VocalEss/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
VocalEss/Source/ui/: Bounce.h  Controls.h  EssLookAndFeel.h  Meters.h  Theme.h
VocalGate/: CMakeLists.txt
VocalGate/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
VocalGate/Source/ui/: GRMeter.h  GateKnob.h  GateLookAndFeel.h  IconButton.h
VocalGeek/: CMakeLists.txt
VocalGeek/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
VocalGeek/Source/dsp/: GeekEngine.h
VocalGeek/Source/ui/: GeekDisplay.h  Theme.h
VocalGeek/Tools/: ScreenPreview.cpp
VocalGrit/: CMakeLists.txt  README.md
VocalGrit/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
VocalGrit/Source/dsp/: Delay.h  Doubler.h  Formant.h  Glitch.h  ReverbModule.h
VocalGrit/Source/licensing/: LicenseGate.h
VocalGrit/Source/ui/: Bounce.h  GritDial.h  GritLookAndFeel.h  LevelMeter.h  Theme.h
VocalKnob/: CMakeLists.txt
VocalKnob/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
VocalKnob/Source/dsp/: Maximizer.h
VocalKnob/Source/ui/: KnobDial.h  KnobLookAndFeel.h
VocalMod/: CMakeLists.txt
VocalMod/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
VocalMod/Source/dsp/: ModEngine.h
VocalQ/: CMakeLists.txt
VocalQ/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
VocalQ/Source/dsp/: EQBand.h  SpectrumAnalyzer.h
VocalQ/Source/licensing/: LicenseManager.h
VocalQ/Source/ui/: EQDisplay.h  Glyph.h  Knob.h  QLookAndFeel.h  Theme.h
VocalRack/: CMakeLists.txt
VocalRack/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
VocalRack/Source/dsp/: ClipEngine.h  Compressor.h  PlateReverb.h
VocalRack/Source/ui/: ActivityBar.h  IconButton.h  PowerButton.h  RackKnob.h  RackLookAndFeel.h  VMeter.h
VocalTune/: CMakeLists.txt
VocalTune/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Scales.h
VocalTune/Source/dsp/: PitchCorrector.h
VocalTune/Source/ui/: CentsMeter.h  IconButton.h  NoteButton.h  NoteDisplay.h  PlateKeyboard.h  RingKnob.h  SegmentedControl.h  Theme.h  ToggleSwitch.h  TuneLookAndFeel.h
VocalVerb/: CMakeLists.txt
VocalVerb/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
VocalVerb/Source/dsp/: Reverb.h
VocalVerb/Source/ui/: Bounce.h  Knob.h  KnobLookAndFeel.h  Theme.h
assets/ui/: manifest.json
common/Licensing/: ActivationOverlay.h  LicenseConfig.h  LicenseManager.cpp  LicenseManager.h
common/ui/: Skin.h
macos/: release_macos.sh
marketing/: HIGGSFIELD-PROMPTS.md  OPENCLAW-RENDER-LOOPS.md
marketing/vst-hero-stills/: README.txt
preset-packs/VocalRack-Signature-Chains-Vol1/: Aggressive Rap.vepreset  Airy Ballad.vepreset  Clean Pop Chain.vepreset  Drake Mix Chain.vepreset  Hyperpop Blowout.vepreset  Late Night Melodic.vepreset  Podcast Dry Voice.vepreset  README.txt  Warm RnB.vepreset
scripts/: build_installer.sh  keygen_setup.py  package_zip.sh  rebuild_all.sh  sign_and_notarize.sh  standalone.entitlements
storefront-handoff/: HANDOFF-PROMPT.md  keygen-policies.md  keygen-policy-singles.json  keygen.env.example  shopify-catalog.md
